--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,7 +93,7 @@ app.encryption.salt=${ENCRYPTION_SALT:TraceBoard2024Salt}
 google.api.key=${GOOGLE_API_KEY:}
 
 # CORS Settings
-app.cors.allowed-origins=${CORS_ORIGINS:http://localhost:8080,http://localhost:3000,https://192.168.75.224,http://192.168.75.224,http://192.168.75.224:8080,https://devzip.cloud,http://devzip.cloud}
+app.cors.allowed-origins=${CORS_ORIGINS:http://localhost:8080,http://localhost:3000,https://192.168.75.224,http://192.168.75.224,http://192.168.75.224:8080,https://devzip.cloud,http://devzip.cloud,https://www.devzip.cloud,http://www.devzip.cloud}
 app.cors.max-age=${CORS_MAX_AGE:3600}
 
 # WebSocket Settings
