--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -249,3 +249,43 @@ jobs:
         echo ""
         echo "✅ Deployment completed successfully!"
         echo "🚀 All systems operational and ready for use!"
+
+    - name: Send Success Webhook
+      if: success()
+      run: |
+        curl -X POST https://devzip.cloud/api/webhook/github-actions \
+          -H "Content-Type: application/json" \
+          -d '{
+            "workflow_name": "${{ github.workflow }}",
+            "status": "success",
+            "repository": "${{ github.repository }}",
+            "branch": "${{ github.ref_name }}",
+            "commit_sha": "${{ github.sha }}",
+            "commit_message": "${{ github.event.head_commit.message }}",
+            "author": "${{ github.actor }}",
+            "run_number": "${{ github.run_number }}",
+            "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
+            "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%S)'",
+            "environment": "production"
+          }' || echo "⚠️ Webhook notification failed (non-blocking)"
+
+    - name: Send Failure Webhook
+      if: failure()
+      run: |
+        curl -X POST https://devzip.cloud/api/webhook/github-actions \
+          -H "Content-Type: application/json" \
+          -d '{
+            "workflow_name": "${{ github.workflow }}",
+            "status": "failure",
+            "repository": "${{ github.repository }}",
+            "branch": "${{ github.ref_name }}",
+            "commit_sha": "${{ github.sha }}",
+            "commit_message": "${{ github.event.head_commit.message }}",
+            "author": "${{ github.actor }}",
+            "run_number": "${{ github.run_number }}",
+            "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
+            "failed_job": "${{ github.job }}",
+            "failure_reason": "Health check or deployment verification failed",
+            "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%S)'",
+            "environment": "production"
+          }' || echo "⚠️ Webhook notification failed (non-blocking)"
