--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -105,3 +105,9 @@ app.pagination.dashboard-limit=${PAGINATION_DASHBOARD:50000}
 app.pagination.export-limit=${PAGINATION_EXPORT:100000}
 app.pagination.user-limit=${PAGINATION_USER:2000}
 app.pagination.type-limit=${PAGINATION_TYPE:5000}
+
+# Webhook Settings - Entry(Guestbook) Events
+# 웹훅을 활성화하려면 webhook.entry.enabled=true로 설정하고,
+# webhook.entry.url에 웹훅을 수신할 URL을 입력하세요
+webhook.entry.enabled=${WEBHOOK_ENTRY_ENABLED:false}
+webhook.entry.url=${WEBHOOK_ENTRY_URL:http://localhost:8080/api/webhook/test}
