--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -19,6 +19,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-fullpage": "^0.1.19",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-native": "^0.79.0",
     "react-native-svg": "^15.11.2",
